minor dark mode fix

--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ body.dark-mode .profile-section h1 {
 }
 
 body.dark-mode .profile-section p {
-    color: #ffffff;
+    color: #000000;
     font-size: 1.5em;
 }
 
